<resources>
    <string name="app_name">Lactarian Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">Settings</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to recipe
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_vegan">Vegan</string>
    <string name="pref_description_vegan">Enable if you want to see vegan recipes only</string>
    <string name="pref_description_jain">Enable if you want to see Jain recipes only</string>
    <string name="pref_title_jain">Jain</string>
    <string name="dessert">Dessert</string>
    <string name="tomato">Tomato</string>
    <string name="american">American</string>
    <string name="side">Side</string>
    <string name="dinner">Dinner</string>
    <string name="appetizer">Appetizer</string>
    <string name="lunch">Lunch</string>
    <string name="brunch">Brunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="buffet">Buffet</string>
    <string name="vegetable">Vegetable</string>
    <string name="fruit">Fruit</string>
    <string name="chocolate">Chocolate</string>
    <string name="potato">Potato</string>
    <string name="lemon">Lemon</string>
    <string name="apple">Apple</string>
    <string name="bean">Bean</string>
    <string name="broccoli">Broccoli</string>
    <string name="cabbage">Cabbage</string>
    <string name="carrot">Carrot</string>
    <string name="citrus">Citrus</string>
    <string name="cranberry">Cranberry</string>
    <string name="eggplant">Eggplant</string>
    <string name="green_bean">Green Bean</string>
    <string name="kale">Kale</string>
    <string name="leafy_green">Leafy Green</string>
    <string name="mushroom">Mushroom</string>
    <string name="pasta">Pasta</string>
    <string name="rice">Rice</string>
    <string name="spinach">Spinach</string>
    <string name="sweet_potato">Sweet Potato</string>
    <string name="zucchini">Zucchini</string>
    <string name="baby_corn">Baby Corn</string>
    <string name="cottage_cheese">Cottage Cheese</string>
    <string name="paneer">Paneer</string>
    <string name="african">African</string>
    <string name="asian">Asian</string>
    <string name="british">British</string>
    <string name="cajun_creole">Cajun/Creole</string>
    <string name="californian">Californian</string>
    <string name="caribbean">Caribbean</string>
    <string name="central_south_american">Central/S. American</string>
    <string name="chinese">Chinese</string>
    <string name="cuban">Cuban</string>
    <string name="eastern_european_russian">Eastern European</string>
    <string name="english">English</string>
    <string name="european">European</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="indian">Indian</string>
    <string name="irish">Irish</string>
    <string name="italian">Italian</string>
    <string name="italian_american">Italian American</string>
    <string name="japanese">Japanese</string>
    <string name="jewish">Jewish</string>
    <string name="korean">Korean</string>
    <string name="latin_american">Latin American</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="mexican">Mexican</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="moroccan">Moroccan</string>
    <string name="nuevo_latino">Nuevo Latino</string>
    <string name="scandinavian">Scandinavian</string>
    <string name="south_american">South American</string>
    <string name="south_asian">South Asian</string>
    <string name="southeast_asian">Southeast Asian</string>
    <string name="southern">Southern</string>
    <string name="southwestern">Southwestern</string>
    <string name="spanish_portuguese">Spanish/Portuguese</string>
    <string name="tex_mex">Tex-Mex</string>
    <string name="thai">Thai</string>
    <string name="turkish">Turkish</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="title_activity_scrolling">Results</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_results">Results</string>
    <string name="include">Include</string>
    <string name="exclude">Exclude</string>
    <string name="saved_recipes">Starred Recipes</string>
    <string name="find">Find</string>
</resources>